@@ -5,7 +5,7 @@ testnums="01 02 03"
 testmodes="attach launch"
 
 statcl_command="${prefix}/bin/stat-cl"
-app_exe="${prefix}/share/STAT/examples/bin/dysect_test"
+app_exe="${prefix}/share/stat/examples/bin/dysect_test"
 logmode=" -l FE -l BE -l CP "
 topologymode=" -u 1-1-1 -p 8 -A -n 8 "
 
